# reef

./: .gitignore
lang/cs/: App.config  Org.Apache.REEF.DotNet.sln  Org.Apache.REEF.sln
lang/cs/Org.Apache.REEF.All/: Org.Apache.REEF.All.csproj
lang/cs/Org.Apache.REEF.Bridge/: DriverLauncher.cpp  Org.Apache.REEF.Bridge.vcxproj  Org.Apache.REEF.Bridge.vcxproj.orig
lang/cs/Org.Apache.REEF.Bridge.CLR/: ClrBridge.cs  JavaClrInterop.cs  LocalObserver.cs  Network.cs  Org.Apache.REEF.Bridge.CLR.csproj  Serializer.cs
lang/cs/Org.Apache.REEF.Bridge.Client/: CShapDriverClientLauncer.cs  DriverServiceClient.cs  DriverServiceLauncher.cs
lang/cs/Org.Apache.REEF.Bridge.DotNet.Dll/: BridgeInterop.h  Org.Apache.REEF.Bridge.DotNet.Dll.vcxproj
lang/cs/Org.Apache.REEF.Bridge.Interop/: BridgeInterop.cpp  BridgeInterop.h  BridgeInteropLogger.cpp  BridgeInteropLogger.h  JavaToCpp.cpp  Org.Apache.REEF.Bridge.Interop.DotNet.vcxproj  Org.Apache.REEF.Bridge.Interop.DotNet.vcxproj.filters
lang/cs/Org.Apache.REEF.Bridge.JAR/: Org.Apache.REEF.Bridge.JAR.csproj
lang/cs/Org.Apache.REEF.Client/: Org.Apache.REEF.Client.DotNet.csproj  Org.Apache.REEF.Client.csproj  packages.config
lang/cs/Org.Apache.REEF.Client.Tests/: Org.Apache.REEF.Client.Tests.csproj  packages.config
lang/cs/Org.Apache.REEF.Common/: Org.Apache.REEF.Common.csproj  packages.config
lang/cs/Org.Apache.REEF.Common.Tests/: Org.Apache.REEF.Common.Tests.csproj
lang/cs/Org.Apache.REEF.DistributedR/: Demo.cs  DistRTaskConfigOptions.cs  DistributedApp.cs  DistributedRApp.cs  DistributedRClient.cs  DistributedRDriver.cs  DistributedRNetworkService.cs  DistributedRTask.cs  DriverHandler.cs  DriverProxy.cs  Job.cs  JobScheduler.cs  Org.Apache.REEF.DistributedR.csproj  RExecTask.cs  Readme.md  SpinTask.cs  TaskRunner.cs  packages.config
lang/cs/Org.Apache.REEF.Driver/: Org.Apache.REEF.Driver.DotNet.csproj  Org.Apache.REEF.Driver.csproj  packages.config
lang/cs/Org.Apache.REEF.Evaluator/: Org.Apache.REEF.Evaluator.csproj  packages.config
lang/cs/Org.Apache.REEF.Examples/: Org.Apache.REEF.Examples.csproj  packages.config
lang/cs/Org.Apache.REEF.Examples.HelloREEF/: HelloREEF.cs
lang/cs/Org.Apache.REEF.FatNuGet/: Org.Apache.REEF.FatNuGet.csproj
lang/cs/Org.Apache.REEF.Fluid/: ClientMessageHandler.cs  DriverHandler.cs  DriverProxy.cs  FluidApplication.cs  FluidClient.cs  FluidServer.cs  JuliaExecTask.cs  Org.Apache.REEF.Fluid.csproj  RExecTask.cs  SpinTask.cs  TaskRecord.cs  TaskRunner.cs  packages.config
lang/cs/Org.Apache.REEF.Fluid/Client/c++/: CMakeLists.txt  vssetup.ps1
lang/cs/Org.Apache.REEF.Fluid/Client/c++/include/fluid/: Client.h  Export.h
lang/cs/Org.Apache.REEF.Fluid/Client/c++/include/fluid/message/: JuliaResultsMsg.h  JuliaTaskMsg.h  RResultsMsg.h  RTaskMsg.h  ShutdownMsg.h
lang/cs/Org.Apache.REEF.Fluid/Client/c++/interface/: FluidCoreInterface.h  FluidInterface.cpp  FluidInterface.h
lang/cs/Org.Apache.REEF.Fluid/Client/c++/src/: Client.cpp
lang/cs/Org.Apache.REEF.Fluid/Client/c++/test/: LoadLibrary.cpp
lang/cs/Org.Apache.REEF.IMRU/: Org.Apache.REEF.IMRU.csproj
lang/cs/Org.Apache.REEF.IMRU.Tests/: Org.Apache.REEF.IMRU.Tests.csproj
lang/cs/Org.Apache.REEF.IO/: Org.Apache.REEF.IO.csproj  packages.config
lang/cs/Org.Apache.REEF.IO.Tests/: Org.Apache.REEF.IO.Tests.csproj
lang/cs/Org.Apache.REEF.Network/: Org.Apache.REEF.Network.csproj
lang/cs/Org.Apache.REEF.Network.Examples/: Org.Apache.REEF.Network.Examples.csproj
lang/cs/Org.Apache.REEF.Network.Tests/: Org.Apache.REEF.Network.Tests.csproj
lang/cs/Org.Apache.REEF.Tang/: Org.Apache.REEF.Tang.csproj
lang/cs/Org.Apache.REEF.Tang.Examples/: Org.Apache.REEF.Tang.Examples.csproj
lang/cs/Org.Apache.REEF.Tang.Tests/: Org.Apache.REEF.Tang.Tests.csproj  packages.config
(+100 files in other folders)
